# active-canvas-lab

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
active_canvas_lab/: __init__.py  __main__.py  cli.py  datasets.py  experiment.py  metrics.py  models.py  reports.py  strategies.py
examples/: run_comparison.py
tests/: test_cli.py  test_datasets.py  test_experiment.py  test_metrics.py  test_models.py  test_reports.py  test_strategies.py
