[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "active-canvas-lab"
version = "0.1.0"
description = "Tiny active-learning lab with synthetic 2D data, query strategies, and visual reports"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["active-learning", "machine-learning", "interactive-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.scripts]
active-canvas-lab = "active_canvas_lab.cli:main"

[project.urls]
Homepage = "https://github.com/get2salam/active-canvas-lab"
Repository = "https://github.com/get2salam/active-canvas-lab"

[tool.setuptools.packages.find]
where = ["."]
include = ["active_canvas_lab*"]
